--- a/src/main/resources/templates/whoami.html
+++ b/src/main/resources/templates/whoami.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>myna</title>
-</head>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{layout :: layout('Who am I?', ~{::#content})}">
 <body>
-    <p>Your user id: <span th:text="${uid}">?</span></p>
+    <div id="content">
+        <h1>Who am I?</h1>
+        <p>Your user id: <code th:text="${session.uid}">?</code></p>
+    </div>
 </body>
-
 </html>
