iss #4: new game form

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/webjars/bootstrap-icons/1.11.2/font/bootstrap-icons.min.css}" rel="stylesheet">
+  <link th:href="@{/static/main.css}" rel="stylesheet">
   <title th:text="(${title} ? ${title} + ' • ' : '') + 'Myna'">Myna</title>
 </head>
 
