--- a/src/main/resources/templates/games/create.html
+++ b/src/main/resources/templates/games/create.html
@@ -4,14 +4,14 @@
 <body>
 <div id="content">
     <h1 class="mt-md-2">New Game</h1>
-    <div class="alert alert-warning" role="alert" th:if="${error} != null" th:text="${error}">
-    </div>
-    <form method="post" th:action="@{/games/create}">
+    <div class="alert alert-warning" role="alert" th:if="${error} != null" th:text="${error}"></div>
+    <form method="post" th:action="@{/games/create}" class="create-form">
         <h4 class="mt-4">Ruleset</h4>
 
         <label class="row mt-4" th:each="ruleset, iter : ${rulesets}">
             <div class="col-1 text-center">
-                <input type="radio" name="ruleset_id" th:value="${ruleset.id}" th:checked="${iter.first}"/>
+                <input type="radio" name="ruleset_id" class="create-form__ruleset_id"
+                       th:value="${ruleset.id}" th:checked="${iter.first}"/>
             </div>
             <div class="col">
                 <h5 th:text="${ruleset.ruleset.name}"></h5>
@@ -40,19 +40,92 @@
                   </label>
               </td>
             </tr>
-
+          </tbody>
+          <tfoot>
             <tr>
               <td colspan="2" class="text-end">I'm not taking part</td>
               <td><label class="w-100 h-100 text-center"><input type="radio" name="me" value="" /></label></td>
             </tr>
-          </tbody>
+          </tfoot>
         </table>
 
         <button class="btn btn-primary btn-lg mt-3" type="submit">Create game</button>
     </form>
-    <script type="application/javascript">
+    <script th:inline="javascript">
+        (function() {
+            window.MynaCreateForm = {};
+            window.MynaCreateForm.playersInfo = /*[[${playersInfo}]]*/{};
 
+            const Manager = function (playersInfo) {
+                this.playersInfo = playersInfo;
+            };
 
+            function getFirstElementByClassName() {
+                const context = (arguments.length === 2) ? arguments[0] : window.document;
+                const className = (arguments.length === 2) ? arguments[1] : arguments[0];
+                const elements = context.getElementsByClassName(className);
+                return (elements.length > 0) ? elements[0] : undefined;
+            }
+            Manager.prototype.init = function () {
+                this.$container = getFirstElementByClassName("player-template__container");
+                this.$template = getFirstElementByClassName(this.$container, "player-template");
+
+                this.$form = getFirstElementByClassName("create-form");
+                this.$rulesetsInputs = Array.from(this.$form.getElementsByClassName("create-form__ruleset_id"));
+
+                this.$rulesetsInputs.forEach(value =>
+                    value.addEventListener("change", this.onRulesetChange.bind(this))
+                );
+
+                this.rebuildPlayers();
+            };
+
+            Manager.prototype.onRulesetChange = function () {
+                this.rebuildPlayers();
+            };
+
+            Manager.prototype.getCurrentRulesetId = function () {
+                const checkedInput = this.$rulesetsInputs.find(e => e.checked);
+                if (checkedInput !== undefined) {
+                    return checkedInput.value;
+                }
+                return undefined;
+            };
+
+            Manager.prototype.rebuildPlayers = function () {
+                const that = this;
+                Array.from(this.$container.getElementsByClassName("player-template__item"))
+                    .forEach(element =>
+                        element.remove()
+                    );
+
+                const ruleset = this.getCurrentRulesetId();
+                if (ruleset !== undefined) {
+                    const players = this.playersInfo[ruleset].players;
+                    let firstPlayer = true;
+                    players.forEach(player => {
+                        const playerNode = that.$template.cloneNode(true);
+                        playerNode.classList.remove("template");
+                        playerNode.classList.add("player-template__item");
+                        getFirstElementByClassName(playerNode, "player-template__role").innerText = player.roleName;
+
+                        const playerName = getFirstElementByClassName(playerNode, "player-template__name");
+                        playerName.name = `playerName[${player.id}]`;
+
+                        const me = getFirstElementByClassName(playerNode, "player-template__me");
+                        me.value = player.id;
+                        if (firstPlayer) {
+                            me.checked = true;
+                            firstPlayer = false;
+                        }
+                        that.$container.append(playerNode);
+                    });
+                }
+            };
+
+            window.MynaCreateForm.manager = new Manager(window.MynaCreateForm.playersInfo);
+            window.MynaCreateForm.manager.init();
+        })();
     </script>
 </div>
 </body>
