--- a/src/main/resources/templates/games/create.html
+++ b/src/main/resources/templates/games/create.html
@@ -5,7 +5,7 @@
 <div id="content">
     <h1 class="mt-md-2">New Game</h1>
     <div class="alert alert-warning" role="alert" th:if="${error} != null" th:text="${error}"></div>
-    <form method="post" th:action="@{/games/create}" class="create-form" >
+    <form method="post" th:action="''" class="create-form" >
         <h4 class="mt-4">Ruleset</h4>
 
         <label class="row mt-4" th:each="ruleset, iter : ${rulesets}">
