--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: layout('Error ' + ${status}, ~{::#content})}">
+      th:replace="~{layout :: layout(${error}, ~{::#content})}">
 <body>
     <div id="content">
-        <h1 class="display-1 fw-bold" th:text="'Error ' + ${status}">Error 500</h1>
-        <p class="fs-3"> <span class="text-danger">Opps!</span></p>
-        <p class="lead" th:text="${message}">Error description</p>
+        <p class="fs-3"> <span class="text-danger">Oops!</span></p>
+        <h1 class="display-1 fw-bold" th:text="${error}">Error 500</h1>
+        <p class="lead" th:text="${message}" th:if="${message} != null">Error description</p>
         <a th:href="@{/}" href="/">Start again</a>
     </div>
 </body>
