--- a/src/main/resources/templates/game/lobby.html
+++ b/src/main/resources/templates/game/lobby.html
@@ -29,7 +29,9 @@
       </tbody>
     </table>
 
-    <form th:if="${isOwner}" th:action="''" class="mt-3" method="post">
+    <form th:if="${isAllowedToLaunch}"
+          th:action="@{/game/{gameId}/lobby/{myPlayerId}(gameId = ${gameId}, myPlayerId = ${myPlayerId})}"
+          class="mt-3" method="post">
         <button class="btn btn-primary btn-lg" type="submit" name="action" value="start">Start game</button>
     </form>
 </div>
