iss #4: end game

--- a/src/main/resources/templates/games/create.html
+++ b/src/main/resources/templates/games/create.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: layout('New Game', ~{::#content})}">
+      th:replace="~{layout/layout::content('New Game', ~{::#content})}">
 <body>
 <div id="content">
     <h1 class="mt-md-2">New Game</h1>
