--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: layout(null, ~{::#content})}">
+      th:replace="~{layout/layout::content(null, ~{::#content})}">
 <body>
     <div id="content">
         <div class="px-4 py-5 my-5 text-center">
