--- a/src/main/resources/templates/game/join.html
+++ b/src/main/resources/templates/game/join.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: layout('Join Game', ~{::#content})}">
+      th:replace="~{layout/layout::content('Join Game', ~{::#content})}">
 <body>
 <div id="content">
     <h1 class="mt-md-2">Join <span th:if="${rulesetName} != null" th:text="${rulesetName}"></span> game</h1>
