--- a/src/main/resources/templates/layout/partial/head.html
+++ b/src/main/resources/templates/layout/partial/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(title, content)" class="h-100">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<head th:fragment="head(title)">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
@@ -10,15 +10,6 @@
   <title th:text="(${title} ? ${title} + ' • ' : '') + 'Myna'">Myna</title>
 </head>
 
-<body class="d-flex flex-column h-100">
-
-    <main class="container flex-shrink-0" th:insert="${content}"></main>
-
-    <footer class="footer mt-auto py-3 bg-light">
-      <div class="container text-end">
-        <small class="text-muted">Powered by Myna</small>
-      </div>
-    </footer>
-
+<body>
 </body>
 </html>
