--- a/src/main/resources/templates/whoami.html
+++ b/src/main/resources/templates/whoami.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: layout('Who am I?', ~{::#content})}">
+      th:replace="~{layout/layout::content('Who am I?', ~{::#content})}">
 <body>
     <div id="content">
         <h1>Who am I?</h1>
