iss #5: draggable objects in UI

--- a/src/main/resources/templates/game/playground.html
+++ b/src/main/resources/templates/game/playground.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="col" id="game-surface"></div>
+        <div class="col ps-0 pe-0" id="game-surface"></div>
     </div>
 </div>
 <script th:inline="javascript" type="module">
